Add Ruby/Sinatra backend API with full functionality
- Complete Sinatra-based REST API for user preferences and contacts
- SQLite3 database with ActiveRecord ORM
- User preferences API with personality scoring
- Contact form handling with status tracking
- Analytics endpoints for data insights
- CORS configuration for frontend integration
- Comprehensive test coverage and documentation
- Ready for deployment on various platforms

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,14 @@ pickle-email-*.html
 !/backend/tmp/.keep
 !/backend/public/system/.keep
 
+# Sinatra backend specific
+/backend/db/*.sqlite3
+/backend/db/*.sqlite3-journal
+/backend/server.log
+/backend/server.pid
+/backend/.bundle/
+/backend/vendor/bundle/
+
 # Environment variables
 .env
 .env.local
